# gh-graph-explorer

./: .gitignore  Dockerfile  Dockerfile.local  README.md  Theory.md  action.yml  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
data/: orgs.json
examples/: README.md  repos.json  usage_example.py  workflow-example.yml
src/: collector.py  graph_analyzer.py  user_work_fetcher.py
src/gh_graph_explorer/: __init__.py  api.py  cli.py
src/gh_graph_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gh_graph_explorer/save_strategies/: neo4j_save.py
src/transformations/: bipartite_collapser.py
