[project]
name = "gh-graph-explorer"
version = "0.1.0"
description = "GitHub Work Graph Explorer as a reusable library and CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "fastmcp>=2.13.3",
    "gql>=3.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "neo4j>=5.18.0",
    "neo4j-driver",
    "networkx>=3.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
    "scipy>=1.15.3",
]

[project.scripts]
# Console command: gh-graph-explorer
gh-graph-explorer = "gh_graph_explorer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Use src layout and include the package
packages = ["src/gh_graph_explorer"]
